--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -24,16 +24,16 @@ jobs:
         with:
           args: --timeout=10m
           version: latest
-  test:
-    name: Run tests
-    runs-on: 'ubuntu-latest'
-    needs: lint
-    steps:
-      - uses: actions/checkout@v2
-      - uses: actions/setup-go@v2
-        with:
-          go-version: '1.20.7'
-      - run: go test -v -cover
+#  test:
+#    name: Run tests
+#    runs-on: 'ubuntu-latest'
+#    needs: lint
+#    steps:
+#      - uses: actions/checkout@v2
+#      - uses: actions/setup-go@v2
+#        with:
+#          go-version: '1.20.7'
+#      - run: go test -v -cover
   release:
     name: Create Release
     runs-on: 'ubuntu-latest'
