--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -37,7 +37,7 @@ jobs:
   release:
     name: Create Release
     runs-on: 'ubuntu-latest'
-    needs: test
+    needs: lint
     strategy:
       matrix:
         goosarch:
