--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -15,8 +15,8 @@ jobs:
     name: Lint files
     runs-on: 'ubuntu-latest'
     steps:
-      - uses: actions/checkout@v2
-      - uses: actions/setup-go@v2
+      - uses: actions/checkout@v3
+      - uses: actions/setup-go@v3
         with:
           go-version: '1.20.7'
       - name: golangci-lint
@@ -41,56 +41,22 @@ jobs:
     strategy:
       matrix:
         goosarch:
-          # - 'aix/ppc64'
-          # - 'android/386'
-          # - 'android/amd64'
-          # - 'android/arm'
-          # - 'android/arm64'
           - 'darwin/amd64'
           - 'darwin/arm64'
-          # - 'dragonfly/amd64'
-          # - 'freebsd/386'
-          # - 'freebsd/amd64'
-          # - 'freebsd/arm'
-          # - 'freebsd/arm64'
-          # - 'illumos/amd64'
-          # - 'ios/amd64'
-          # - 'ios/arm64'
           - 'js/wasm'
           - 'linux/386'
           - 'linux/amd64'
           - 'linux/arm'
           - 'linux/arm64'
-          #- 'linux/mips'
-          #- 'linux/mips64'
-          #- 'linux/mips64le'
-          #- 'linux/mipsle'
-          #- 'linux/ppc64'
-          #- 'linux/ppc64le'
-          #- 'linux/riscv64'
-          #- 'linux/s390x'
-          #- 'netbsd/386'
-          #- 'netbsd/amd64'
-          #- 'netbsd/arm'
-          # - 'netbsd/arm64'
-          # - 'openbsd/386'
-          # - 'openbsd/amd64'
-          # - 'openbsd/arm'
-          # - 'openbsd/arm64'
-          # - 'openbsd/mips64'
-          # - 'plan9/386'
-          # - 'plan9/amd64'
-          # - 'plan9/arm'
-          # - 'solaris/amd64'
           - 'windows/386'
           - 'windows/amd64'
           - 'windows/arm'
     steps:
       - name: Checkout code
-        uses: actions/checkout@v2
+        uses: actions/checkout@v3
         with:
           fetch-depth: 0
-      - uses: actions/setup-go@v2
+      - uses: actions/setup-go@v3
         with:
           go-version: '1.20.7'
       - name: Get OS and arch info
@@ -114,5 +80,7 @@ jobs:
           body_path: ".github/RELEASE-TEMPLATE.md"
           draft: true
           files: ${{env.BINARY_NAME}}
+          token: ${{ secrets.GITHUB_TOKEN }}
+          GITHUB_REPOSITORY: ftamas88/discord-subscription-bot
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
