--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -6,6 +6,10 @@ on:
 
 name: Latest Release
 
+permissions:
+  contents: write
+  packages: write
+
 defaults:
   run:
     shell: bash
@@ -56,7 +60,7 @@ jobs:
         uses: actions/checkout@v3
         with:
           fetch-depth: 0
-      - uses: actions/setup-go@v3
+      - uses: actions/setup-go@v4
         with:
           go-version: '1.20.7'
       - name: Get OS and arch info
@@ -68,9 +72,14 @@ jobs:
           echo "BINARY_NAME=$BINARY_NAME" >> $GITHUB_ENV
           echo "GOOS=$GOOS" >> $GITHUB_ENV
           echo "GOARCH=$GOARCH" >> $GITHUB_ENV
+          echo "CGO_ENABLED=1" >> $GITHUB_ENV
+          go env -w CGO_ENABLED=1
       - name: Build
         run: |
           go build -v -o "$BINARY_NAME" cmd/bot/bot.go
+      - name: BuildWindows
+        if: ${{ $GOARCH == 'amd64' && $GOOS="windows" }}
+        run: go build -v -o "$BINARY_NAME".exe cmd/bot/bot.go
       - name: Release Notes
         run:
           git log $(git describe HEAD~ --tags --abbrev=0)..HEAD --pretty='format:* %h %s%n  * %an <%ae>' --no-merges >> ".github/RELEASE-TEMPLATE.md"
@@ -81,6 +90,5 @@ jobs:
           draft: true
           files: ${{env.BINARY_NAME}}
           token: ${{ secrets.GITHUB_TOKEN }}
-          GITHUB_REPOSITORY: ftamas88/discord-subscription-bot
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
